[gd_scene load_steps=14 format=2]

[ext_resource path="res://fonts/BANDEM-BOLD.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://MainMenuBg.png" type="Texture" id=2]
[ext_resource path="res://Main Menu Blur.tres" type="Material" id=3]
[ext_resource path="res://chat_overlay/pointer.svg" type="Texture" id=4]
[ext_resource path="res://MainMenuTextMenu.gd" type="Script" id=5]
[ext_resource path="res://Main Menu.gd" type="Script" id=6]
[ext_resource path="res://chat_overlay/Open_Sans/OpenSans-Regular.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://volume_control/VolumeSliders.tscn" type="PackedScene" id=8]

[sub_resource type="DynamicFont" id=4]
size = 23
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=1]
size = 88
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 44
extra_spacing_top = 13
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 35
extra_spacing_top = 10
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 88
font_data = ExtResource( 1 )

[node name="Main Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background image" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource( 2 )
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Background image"]
material = ExtResource( 3 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Controls" type="Label" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 6.0
margin_top = -209.0
margin_right = 365.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 4 )
text = "Controls

Arrow keys / Left joystick to move
Space or A / X to talk to people
Escape or B / O to speed up text
Escape / Start to pause"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Main" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Main"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -152.0
margin_top = -192.0
margin_right = 158.0
margin_bottom = -103.0
grow_horizontal = 2
custom_fonts/font = SubResource( 1 )
text = "Flaked!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextMenu" type="GridContainer" parent="Main"]
margin_left = -4.73407
margin_top = -94.0
margin_right = 35.2659
margin_bottom = -54.0
grow_horizontal = 2
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pointer" type="Sprite" parent="Main/TextMenu"]
position = Vector2( -15, 30 )
texture = ExtResource( 4 )
centered = false
offset = Vector2( -20, -10 )

[node name="EnterName" type="Control" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="EnterName"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -80.0
margin_top = 29.0
margin_right = 64.0
margin_bottom = 97.0
custom_fonts/font = SubResource( 2 )
text = "Begin!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit" type="LineEdit" parent="EnterName"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -65.0
margin_right = 163.0
margin_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 3 )
placeholder_text = "Froggit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VolumeSliders" parent="." instance=ExtResource( 8 )]
margin_left = -296.0
margin_top = -91.5
margin_right = 296.0
margin_bottom = 91.5

[node name="Label" type="Label" parent="VolumeSliders"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -155.0
margin_top = -82.0
margin_right = 155.0
margin_bottom = 7.0
grow_horizontal = 2
custom_fonts/font = SubResource( 5 )
text = "Volume"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="go_to" from="Main/TextMenu" to="." method="_on_TextMenu_go_to"]
[connection signal="new_game" from="Main/TextMenu" to="." method="_on_TextMenu_new_game"]
[connection signal="pressed" from="EnterName/Button" to="." method="_on_Button_pressed"]
[connection signal="text_entered" from="EnterName/TextEdit" to="." method="_on_TextEdit_text_entered"]
[connection signal="exit" from="VolumeSliders" to="." method="_on_VolumeSliders_exit"]
